# climbDptMap

./: README.md  heatmap.py  index.html  main.py  map.html  map_template.py  pyproject.toml  scrape.py
data/: climbing_gyms.json  combined.json  dpt_programs.json  osm_gyms_raw.json
